--- a/PRO1P3_Grupo6.vcxproj.filters
+++ b/PRO1P3_Grupo6.vcxproj.filters
@@ -68,5 +68,8 @@
     <ClInclude Include="Circulo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Funciones.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
