--- a/PRO1P3_Grupo6.vcxproj.filters
+++ b/PRO1P3_Grupo6.vcxproj.filters
@@ -69,7 +69,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Funciones.h">
-      <Filter>Header Files</Filter>
+      <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
